@@ -275,7 +275,6 @@
                         <configuration>
                             <target>11</target>
                             <compilerArgs>
-                                <arg>--add-exports=java.base/sun.util=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
                             </compilerArgs>
@@ -300,7 +299,6 @@
                         <configuration>
                             <target>12</target>
                             <compilerArgs>
-                                <arg>--add-exports=java.base/sun.util=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
                             </compilerArgs>
@@ -325,10 +323,8 @@
                         <configuration>
                             <target>13</target>
                             <compilerArgs>
-                                <arg>--add-exports=java.base/sun.util=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-
                             </compilerArgs>
                         </configuration>
                     </plugin>
